RESOLVED FIXED138246
REGRESSION(r163656): Remote inspector doesn't work unless preferences change after page initialization
https://bugs.webkit.org/show_bug.cgi?id=138246
Summary REGRESSION(r163656): Remote inspector doesn't work unless preferences change ...
Carlos Garcia Campos
Reported 2014-10-31 04:09:46 PDT
The problem is that initializeWebPage() is still using pageGroup().preferences() instead of m_preferences to check if developer extras are enabled to enable remote inspection of the page.
Attachments
Patch (1.41 KB, patch)
2014-10-31 04:12 PDT, Carlos Garcia Campos
joepeck: review+
Carlos Garcia Campos
Comment 1 2014-10-31 04:12:20 PDT
Joseph Pecoraro
Comment 2 2014-10-31 12:01:33 PDT
Comment on attachment 240731 [details] Patch r=me
Carlos Garcia Campos
Comment 3 2014-11-01 02:59:13 PDT
Note You need to log in before you can comment on or make changes to this bug.