REGRESSION(r163656): Remote inspector doesn't work unless preferences change after page initialization https://bugs.webkit.org/show_bug.cgi?id=138246

Reviewed by Joseph Pecoraro.

The problem is that initializeWebPage() is still using
pageGroup().preferences() instead of m_preferences to check if
developer extras are enabled to enable remote inspection of the page.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::initializeWebPage): Use m_preferences
instead of pageGroup().preferences().

Canonical link: https://commits.webkit.org/156122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175451 268f45cc-cd09-0410-ab3c-d52691b4dbfc